--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -31,20 +31,12 @@ html body {
   padding: 2em 0em;
 }
 
-.nascosto {
-  font-size: 0.9;
-  display: inline;
-  margin: auto;
-}
-
 .data_type {
-  width: 75%;
+  width: 80%;
   display: grid;
-  grid-template-columns: 31% 31% 31% 6%;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 2.3em;
-  padding-right: 2.3em;
+  grid-template-columns: 33% 33% 33%;
+  margin: auto;
+  padding: 2em;
   padding-top: 4em;
   padding-bottom: 0.5em;
 }
@@ -56,7 +48,7 @@ html body {
 }
 
 .transactions {
-  width: 75%;
+  width: 80%;
   max-height: 32em;
   overflow-y: scroll;
   overflow-x: hidden;
@@ -68,7 +60,7 @@ html body {
 
 .transactions li {
   display: grid;
-  grid-template-columns: 31% 31% 31% 6%;
+  grid-template-columns: 33% 33% 33%;
   text-align: center;
   width: 100%;
   color: black;
@@ -80,10 +72,32 @@ html body {
   background-size: 2.9em;
 }
 
-.transactions #state {
-  max-width: 50%;
-  max-height: 50%;
-  margin: auto;
+.transactions li.stato0 {
+  background-image: url("../img/grey.png");
+  background-size: 0.7em;
+  background-position: 97%;
+  background-repeat: no-repeat;
+}
+
+.transactions li.stato1 {
+  background-image: url("../img/yellow.png");
+  background-size: 0.7em;
+  background-position: 97%;
+  background-repeat: no-repeat;
+}
+
+.transactions li.stato2  {
+  background-image: url("../img/green.png");
+  background-size: 0.7em;
+  background-position: 97%;
+  background-repeat: no-repeat;
+}
+
+.transactions li.stato3 {
+  background-image: url("../img/red.png");
+  background-size: 0.7em;
+  background-position: 97%;
+  background-repeat: no-repeat;
 }
 
 .transactions a {
@@ -108,6 +122,12 @@ html body {
 .info a {
   color: #0c162c;
   font-weight: bold;
+}
+
+.state_list {
+  font-size: 0.9;
+  display: inline;
+  margin: auto;
 }
 
 .price_list {
