--- a/server/views/footer.ejs
+++ b/server/views/footer.ejs
@@ -5,15 +5,26 @@
 </div>
 </div>
 <footer>
-    <div class="grid-container">
-        <div class="grid-item">
-            <p>Contact Us</p>
-            <ul class="items">
-                <li><a href="https://www.synclab.it/" target="_blank">SyncLab</a></li>
-                <li><a href="mailto:winningsoftwaresolution@gmail.com">winningsoftwaresolution@gmail.com</a></li>
-            </ul>
-        </div>
-    </div>
+    <dl>
+        <dt><a href="https://www.synclab.it/" target="_blank">SyncLab</a></dt>
+        <dd>
+            <p>Software. Business. Innovazione.</p>
+            <p>Sviluppiamo Valore.</p>
+        </dd>
+        <dt>
+            <a href="mailto:winningsoftwaresolution@gmail.com" target="_blank">Winning Software Solution</a>
+        </dt>
+        <dd>
+            <p>Giovanni Cocco, Matteo Galvagni, Federico Marchi, Alberto Nicoletti, Raffaele Oliviero, Elia Scandaletti, Andrea Volpe.</p>
+        </dd>
+        <dt>
+            <a href="https://www.math.unipd.it/~tullio/IS-1/2021/" target="_blank">Ingegneria del Software - UniPd</a>
+        </dt>
+        <dd>
+            <p>Prof. Tullio Vardanega, Prof. Riccardo Cardin.</p>
+        </dd>
+    </dl>
+    <p>Copyright 2022 Winning Software Solution</p>
 </footer>
 </body>
 </html>
