--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -299,43 +299,39 @@ header a.logo{
   flex: 1 0 auto;
 }
 
-footer a {
-  text-decoration: none;
-  color: white;
-}
-
 footer {
   margin-top: 2em;
   background-color: #0c162c;
-  padding: 0em;
-  color: white;
+  padding: 1.8em 0.6em;
+  color: rgb(187, 187, 187);
   font-size: 0.72em;
+  text-align:center;
+}
+footer a {
+  color: rgb(223, 223, 223);
 }
 
-footer .grid-container{
-  display: grid;
-  grid-auto-columns: 1fr;
-  grid-auto-flow: column;
-  padding: 0.625em;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  margin-top: 1em;
+footer dl{
+  display:grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
 }
 
-footer .grid-item{
-  font-weight: 700;
+footer dt{
+  grid-row:1;
+  font-size: 1.15em;
+  margin: 0.5em 0;
+}
+footer dd{
+  grid-row:2;
+  margin:0 0.5em;
+  font-style: italic;
 }
 
-footer .items{
-  font-weight: normal;
-  padding: 0.3125em;
-  font-family: Arial, Helvetica, sans-serif;
-  text-decoration: underline;
-}
-
-footer .items li{
-  padding: 0.3125em;
+footer p{
+  grid-row:3;
+  margin:0 0.5em;
+  font-style: italic;
 }
 
 ul {
