--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -226,6 +226,15 @@ html body {
   margin-bottom: 3em;
 }
 
+.pop>div>button:hover, .info>button:hover, #qr:hover, #cancelPaymentButton:hover, #unlockFundsButton:hover, #refundPaymentButton:hover {
+  background-color: #192f5e;
+}
+
+.pop>div>button:active, .info>button:active, #qr:active, #cancelPaymentButton:active, #unlockFundsButton:active, #refundPaymentButton:active {
+  background-color: white;
+  color: black;
+}
+
 .info>button, #qr, #cancelPaymentButton, #refundPaymentButton{
   top: 0em;
   margin-bottom: 2em;
@@ -250,6 +259,14 @@ html body {
   cursor: pointer;
 }
 
+.copyButton:hover{
+  background-image: url(../img/copyHover.png);
+}
+
+.copyButton:active{
+  background-image: url(../img/copyClick.png);
+}
+
 .extraspace {
   margin-bottom: 7em;
 }
@@ -272,12 +289,37 @@ header a {
   padding: 0.5em;
   text-decoration: none;
   font-size: 1.2em;
+  border-style:solid;
+  border-color: #0c162c;
   border-radius: 10px;
 }
 
 header a.current {
   background-color: rgba(255, 255, 255, .1);
   pointer-events: none;
+}
+
+
+header a:hover{
+	border-style: solid;
+	border-color: black;
+}
+
+header a:active{
+	border-style: solid;
+	background: white;
+	color: black;
+}
+
+.logo:hover{
+	border-style: solid;
+	border-color: #0c162c;
+}
+
+.logo:active{
+	border-style: solid;
+	border-color: #0c162c;
+	background: #0c162c
 }
 
 header a #logo {
