--- a/server/views/footer.ejs
+++ b/server/views/footer.ejs
@@ -12,7 +12,7 @@
             <p>Sviluppiamo Valore.</p>
         </dd>
         <dt>
-            <a href="mailto:winningsoftwaresolution@gmail.com" target="_blank">Winning Software Solution</a>
+            <a href="mailto:winningsoftwaresolution@gmail.com">Winning Software Solution</a>
         </dt>
         <dd>
             <p>Giovanni Cocco, Matteo Galvagni, Federico Marchi, Alberto Nicoletti, Raffaele Oliviero, Elia Scandaletti, Andrea Volpe.</p>
