Disabilita link circolari

--- a/server/views/buyer.ejs
+++ b/server/views/buyer.ejs
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <title>Outgoing | Shop Chain</title>
 
-<%- include('header.ejs') %>
+<%- include('header.ejs', {current: 'buyer'}) %>
 
 <input id="idWallet" type="hidden" value="<%=id%>">
 <%-items%>
