--- a/server/views/help.ejs
+++ b/server/views/help.ejs
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <title>Help | Shop Chain</title>
   
-<%- include('header.ejs') %>
+<%- include('header.ejs', {current: 'help'}) %>
 
 <div class="info" id="main">
 <h2>Need help?</h2>
