--- a/server/views/main.ejs
+++ b/server/views/main.ejs
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <title>Shop Chain</title>
 
-<%- include('header.ejs') %>
+<%- include('header.ejs', {current: 'main'}) %>
 
 <div class="info" id="main">
 <h2>Welcome to Shop&nbsp;Chain</h2>
