--- a/server/views/seller.ejs
+++ b/server/views/seller.ejs
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <title>Incoming | Shop Chain</title>
 
-<%- include('header.ejs') %>
+<%- include('header.ejs', {current: 'seller'}) %>
 
 <input id="idWallet" type="hidden" value="<%=id%>">
 <%-items%>
