--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -275,6 +275,11 @@ header a {
   border-radius: 10px;
 }
 
+header a.current {
+  background-color: rgba(255, 255, 255, .1);
+  pointer-events: none;
+}
+
 header a #logo {
   width: 100%;
   height: 100%;
