--- a/server/public/css/mini.css
+++ b/server/public/css/mini.css
@@ -71,6 +71,14 @@
     transform: rotate(45deg) translate(-0.5em, -0.5em);
 }
 
+footer dl{
+    grid-template-rows: 1fr;
+}
+
+footer dd{
+    display: none;
+}
+
 .data_type {
   display: none;
 }
