Do this for real FFS

--- a/server/views/detail.ejs
+++ b/server/views/detail.ejs
@@ -7,7 +7,7 @@
 
 <%- include('header.ejs') %>
 
-<nav id="breadcrumb">You are in: <a href="/">Home</a> &gt; Transaction Details: <%- id -%></nav>
+<nav id="breadcrumb">You are in: <a href="/">Home</a> &gt; <%-bread%> &gt; Transaction Details: <%- id -%></nav>
 
 <div class="info">
     <strong class="price">Price <%-price%>$</strong>
