--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -382,7 +382,7 @@ header a.logo{
 footer {
   margin-top: 2em;
   background-color: #0c162c;
-  padding: 1.8em 0.6em;
+  padding: 1.8em 0.6em 0.2em;
   color: rgb(187, 187, 187);
   font-size: 0.72em;
   text-align:center;
@@ -409,7 +409,7 @@ footer dd{
 }
 
 footer p{
-  margin:1em 0.5em;
+  margin:0.1em 0.5em;
   font-style: italic;
 }
 
